deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: replit-takeout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: replit-takeout
  template:
    metadata:
      labels:
        app: replit-takeout
    spec:
      containers:
        - name: replit-takeout
          image: hackclub/replit-takeout:latest
          ports:
            - containerPort: 8000
