service.yaml
apiVersion: v1
kind: Service
metadata:
  name: replit-takeout-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: replit-takeout
